[package]
name = "cryptograms"
version = "0.1.0"
edition = "2021"

[dependencies]
juniper = "~0.15"
juniper_iron = "~0.7"
iron = ">= 0.5, < 0.7"
logger = "0.4"
log = "~0.4"
env_logger = "~0.9"
mount = "0.4"
serde_json = "~1.0"
lazy_static = "1.4"
rand = "~0.8"

[dev-dependencies]
graphql_client = { version = "~0.11", features = ["reqwest-blocking"] }
serde = "^1.0"
reqwest = { version = "^0.11", features = ["json", "blocking"] }
tempfile = "~3.3"
rand_core = "~0.6"
regex = "~1.6"

[[test]]
name = "integration"
harness = false
path = "tests/integration_test.rs"
test = true

